--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
 		<section>
 			
 			<div class="container-fluid">
+				<h1>ZE Vidéothèque</h1>
 				<table class="table mt-3" id="table_films" border="1">
 				</table>
 			</div>
 			
 
-			<form action="">
+			<form action="" id="formulaire">
 					<div class="form-group ml-4">
 
 						<div class="form-group">
@@ -49,7 +50,7 @@
 						<div class="form-group">
 							<label for="annee" class="col-sm-2 col-form-label">Année de sortie : </label>
 							<div class="col-sm-10">
-							  <input type="text" class="form-control" name="annee" id="annee" placeholder="Année de sortie">
+							  <input type="number" class="form-control" name="annee" id="annee" placeholder="Année de sortie">
 						</div>
 
 						<div class="form-group">
@@ -80,7 +81,7 @@
 						<div class="form-group col-sm-2">
 							<label for="classement">Classement :</label>
 
-								<select class="custom-select mr-sm-2 name="classement" id="classement-select">
+								<select class="custom-select mr-sm-2" name="classement" id="classement-select">
 									<option value="">Classement</option>
 									<option value="Tout Public">Tout Public</option>
 									<option value="-12 ans">-12 ans</option>
@@ -93,7 +94,7 @@
 
 							<label for="support">Support :</label>
 
-								<select class="custom-select mr-sm-2 name="support" id="support-select">
+								<select class="custom-select mr-sm-2" name="support" id="support-select">
 									<option value="">Type de support</option>
 									<option value="DVD">DVD</option>
 									<option value="Blu Ray">Blu Ray</option>
@@ -122,13 +123,13 @@
 							<legend>Film visionné:</legend>
 						
 							<div>
-							<input type="radio" id="oui" name="visione" value="Oui"
+							<input type="radio" id="yes" name="visione" value="Oui"
 									checked>
 							<label for="oui">Oui</label>
 							</div>
 						
 							<div>
-							<input type="radio" id="non" name="visione" value="Non">
+							<input type="radio" id="no" name="visione" value="Non">
 							<label for="non">Non</label>
 							</div>
 
@@ -137,12 +138,12 @@
 						<div class="form-group">
 							<label for="note" class="col-sm-2 col-form-label">Note : </label>
 							<div class="col-sm-10">
-							  <input type="text" class="form-control" name="note" id="note" placeholder="Note">
+							  <input type="number" class="form-control" name="note" id="note" placeholder="Note">
 						</div>
 
 						<div class="form-check mt-3">
-							<input type="checkbox" class="form-check-input" id="steelBook">
-							<label class="form-check-label" for="steelBook">SteelBox</label>
+							<input type="checkbox" class="form-check-input" id="steelBox">
+							<label class="form-check-label" for="steelBox">SteelBox</label>
 						</div>
 
 					</div>
@@ -158,7 +159,7 @@
 					&nbsp;&nbsp;&nbsp;
 					<button type="button" onClick="majFilm()" class="btn-secondary btn-lg" id="btn_modifier">MODIFIER</button>
 					&nbsp;&nbsp;&nbsp;
-					<button type="button" onClick="annulFilm()" class="btn-danger btn-lg" id="btn_annuler">ANNULER</button>
+					<button type="button" onClick="resetForm()" class="btn-danger btn-lg" id="btn_annuler">ANNULER</button>
 				</div>
 			</div>
 		</section>
