--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<script src="/bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="/js/main.js" defer></script>
 		<link rel="stylesheet" href="/css/style.css">
-		<script type="text/javascript" src="jquery_3_3_1.js"></script>
-	    <link rel="stylesheet" type="text/css" href="datatables.min.css">
-    	<script type="text/javascript" charset="utf8" src="datatables.min.js"></script>
+		<script type="text/javascript" src="/js/jquery_3_3_1.js"></script>
+	    <link rel="stylesheet" type="text/css" href="/css/datatables.min.css">
+    	<script type="text/javascript" charset="utf8" src="/js/datatables.min.js"></script>
 
 	</head>
 
@@ -34,6 +34,7 @@
 			<div class="container-fluid">
 				<h1>ZE Vidéothèque</h1>
 				<table class="table mt-3" id="table_films" border="1">
+
 				</table>
 			</div>
 			
